# blink_bluepill_rust

./: README.md  static vs self registers acces.md
blue_pill_blinky/: Cargo.toml  openocd.cfg
blue_pill_blinky/.cargo/: config
blue_pill_blinky/src/: main.rs
