[package]
authors = ["Fabien Tregan"]
edition = "2018"
readme = "README.md"
name = "blue_pill_blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"
embedded-hal = "0.2.2"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.1.1"

# this lets you use `cargo fix`!
[[bin]]
name = "blue_pill_blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
